# noir

./: .actrc  .aztec-sync-commit  .devcontainer.json  .dockerignore  .earthlyignore  .envrc  .eslintrc.js  .gitattribute  .gitattributes  .gitignore  .gitmodules  .ignore  .noir-sync-commit  .release-please-manifest.json  .rustfmt.toml  .tokeignore  .yarnrc.yml  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  CRITICAL_NOIR_LIBRARIES  Cargo.toml  DISCLAIMER.md  Dockerfile  Dockerfile.ci  Dockerfile.ci.dockerignore  Dockerfile.ci.orig  Dockerfile.env  Dockerfile.js-tests  Dockerfile.packages  EXTERNAL_NOIR_LIBRARIES.yml  Earthfile  HELLO.md  LICENSE  LICENSE-MIT  Nargo.toml  PROJECT  Prover.toml  README.md  (+46 more)
acvm-repo/: .gitignore  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  a.txt  cspell.json  deny.toml  flake.nix  release-please-config.json
acvm-repo/.github/workflows/: deny.yml  publish-acvm-js.yml  publish.yml  release.yml  rust.yml  spellcheck.yml  test.yml  typescript.yml
acvm-repo/acir/: CHANGELOG.md  Cargo.toml  README.md  acir_docs.md  build.rs
acvm-repo/acir/benches/: serialization.rs
acvm-repo/acir/codegen/: acir.cpp  witness.cpp
acvm-repo/acir/src/: lib.rs  serialization.rs  test_fixtures.rs
acvm-repo/acir/tests/: test_program_serialization.rs
acvm-repo/acir_field/: CHANGELOG.md  Cargo.toml
acvm-repo/acir_field/benches/: field_element.rs
acvm-repo/acir_field/proptest-regressions/: field_element.txt
acvm-repo/acir_field/src/: field_element.rs  generic_ark.rs  lib.rs
acvm-repo/acvm/: CHANGELOG.md  Cargo.toml  README.md  log.txt
acvm-repo/acvm-js/: package.json
acvm-repo/acvm-js/.cargo/: config.toml
acvm-repo/acvm-js/src/: js_witness_map.rs  lib.rs  logging.rs
acvm-repo/acvm_js/: .eslintignore  .gitignore  .mocharc.json  Cargo.toml  README.md  build.rs  build.sh  buildPhaseCargoCommand.sh  installPhase.sh  package.json  tsconfig.json  web-test-runner.config.mjs
acvm-repo/barretenberg_blackbox_solver/: CHANGELOG.md  Cargo.toml  build.rs
acvm-repo/blackbox_solver/: Cargo.toml
acvm-repo/bn254_blackbox_solver/: Cargo.toml  build.rs
acvm-repo/brillig/: Cargo.toml  README.md
acvm-repo/brillig_vm/: Cargo.toml  README.md
acvm-repo/m31_blackbox_solver/: Cargo.toml
acvm-repo/msgpack_tagged/: Cargo.toml  README.md
acvm-repo/msgpack_tagged_derive/: Cargo.toml
acvm-repo/stdlib/: CHANGELOG.md  Cargo.toml
avm-transpiler/: Cargo.toml  Dockerfile  Dockerfile.dockerignore  Earthfile  README.md  bootstrap.sh  bootstrap_cache.sh  rust-toolchain.toml
avm-transpiler/scripts/: compile_then_transpile.sh
avm-transpiler/src/: instructions.rs  main.rs  opcodes.rs  transpile.rs  transpile_contract.rs  utils.rs
aztec_backend/: Cargo.toml
aztec_backend/src/: lib.rs
aztec_macros/: Cargo.toml
aztec_macros/src/: lib.rs
barretenberg-rs/: .gitignore  Cargo.toml  notes.md
barretenberg-rs/src/: barretenberg-sc.wasm  barretenberg.wasm  composer.rs  crs.rs  fft.rs  lib.rs  main.rs  pippenger.rs  prover.rs
bb-pilcom/: Cargo.toml  bootstrap.sh
bb-pilcom/bb-pil-backend/: Cargo.toml
bb-pilcom/cli/: Cargo.toml  README.md
librasac_analyser/: Cargo.toml
librasac_analyser/src/: lib.rs
librasac_parser/: Cargo.toml
librasac_parser/src/: lib.rs  parser.rs
noir/: .dockerignore  .earthlyignore  .gitattributes  .gitignore  .gitrepo  .rebuild_patterns_native  .rebuild_patterns_packages  .rustfmt.toml  Cargo.toml  Dockerfile  Dockerfile.ci  Dockerfile.dockerignore  Dockerfile.native  Dockerfile.native-test  Dockerfile.packages  Dockerfile.packages-test  Earthfile  README.md  SUPPORT.md  bootstrap.sh  bootstrap_cache.sh  package.json  readme.md  shell.nix
noir/.github/: pull_request_template.md
noir/docs/: docusaurus.config.ts  package.json
noir/noir-repo/: .envrc  .gitrepo  Cargo.toml  LICENSE-MIT  README.md  cspell.json  rust-toolchain.toml  wasm-bindgen-cli.nix
noir/scripts/: bootstrap_native.sh  bootstrap_packages.sh  fix_incremental_ts.sh  nargo_compile_noir_codegen_assert_lt.sh  sync-fixup.sh  sync-in-fixup.sh  sync-out-fixup.sh  test_js_packages.sh  test_native.sh  update-acvm-workspace-versions.sh
noir/src/: main.rs
noir/test_programs/: rebuild.sh
noir/verify_honk_proof/: Prover.toml
noir_cli/: Cargo.toml
noir_cli/src/: main.rs
noir_evaluator/: Cargo.toml
noir_evaluator/src/: environment.rs  errors.rs  func.rs  infix_evaluator.rs  lib.rs  optimise.rs
noir_field/: Cargo.toml
noir_field/src/: lib.rs
noir_wg/: Cargo.toml
noir_wg/src/: arithmetic.rs  directive.rs  lib.rs  logic.rs
noirc_analyser/: Cargo.toml
noirc_analyser/src/: lib.rs
noirc_driver/: Cargo.toml
noirc_driver/bar_proj/: coo.nr  lib.nr  main.nr
noirc_driver/example_project/: lib.noir
noirc_driver/example_real_project/: main.nr
noirc_driver/foo_proj/: lib.nr  wow.nr
noirc_driver/src/: lib.rs  module_disc.rs
noirc_driver/tests/: tests.rs
noirc_frontend/: Cargo.toml
noirc_frontend/example_project/: lib.nr  main.nr  world.nr
noirc_frontend/src/: lib.rs  main.rs  node_interner.rs
pwg/: Cargo.toml
pwg/src/: arithmetic.rs  lib.rs  logic.rs  merkle.rs
rasa_cli/: Cargo.toml  readme.md
rasa_cli/src/: lib.rs  main.rs  synthesiser.rs
rasa_serialiser/: Cargo.toml
rasa_serialiser/src/: lib.rs
rasa_wg/: Cargo.toml
rasa_wg/src/: arithmetic.rs  directive.rs  lib.rs
test_programs/: .gitignore  Cargo.toml  Nargo.toml  README.md  build.rs  compilation_report.sh  create_snapshots.sh  execution_report.sh  format.ps1  format.sh  gates_report.py  gates_report.sh  gates_report_brillig.sh  gates_report_brillig_execution.sh  memory_report.py  memory_report.sh  parse_memory.sh  parse_time.sh  rebuild.py  rebuild.sh
test_programs/plonky2_prove_failure/: 1_mul  2_div  sha256_orig
test_programs/plonky2_prove_success/: array_eq  workspace  xor
test_programs/plonky2_prove_unsupported/: field_attribute
test_programs/plonky2_verify_success/: zk_dungeon
test_programs/robotFrameworks/: usb_provisioning.robot
test_programs/src/: lib.rs
test_programs/test_underconstrained/: Nargo.toml
(+51478 files in other folders)
