[workspace]

members = [
    # Compiler crates
    "compiler/noirc_arena",
    "compiler/noirc_evaluator",
    "compiler/noirc_frontend",
    "compiler/noirc_errors",
    "compiler/noirc_driver",
    "compiler/noirc_printable_type",
    "compiler/fm",
    "compiler/wasm",
    # Crates related to tooling built on top of the Noir compiler
    "tooling/lsp",
    "tooling/debugger",
    "tooling/fuzzer",
    "tooling/nargo",
    "tooling/nargo_fmt",
    "tooling/nargo_cli",
    "tooling/nargo_toml",
    "tooling/noirc_artifacts",
    "tooling/noirc_abi",
    "tooling/noirc_abi_wasm",
    "tooling/acvm_cli",
    "tooling/profiler",
    # ACVM
    "acvm-repo/acir_field",
    "acvm-repo/acir",
    "acvm-repo/acvm",
    "acvm-repo/acvm_js",
    "acvm-repo/brillig",
    "acvm-repo/brillig_vm",
    "acvm-repo/blackbox_solver",
    "acvm-repo/bn254_blackbox_solver",
    # Utility crates
    "utils/iter-extended",
]
default-members = ["tooling/nargo_cli", "tooling/acvm_cli", "tooling/profiler"]
resolver = "2"

[workspace.package]
# x-release-please-start-version
version = "1.0.0-beta.1"
# x-release-please-end
authors = ["The Noir Team <team@noir-lang.org>"]
edition = "2021"
rust-version = "1.74.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/noir-lang/noir/"

[workspace.lints.rust]
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"

[workspace.dependencies]

# ACVM workspace dependencies
acir_field = { version = "1.0.0-beta.1", path = "acvm-repo/acir_field", default-features = false }
acir = { version = "1.0.0-beta.1", path = "acvm-repo/acir", default-features = false }
acvm = { version = "1.0.0-beta.1", path = "acvm-repo/acvm" }
brillig = { version = "1.0.0-beta.1", path = "acvm-repo/brillig", default-features = false }
brillig_vm = { version = "1.0.0-beta.1", path = "acvm-repo/brillig_vm", default-features = false }
acvm_blackbox_solver = { version = "1.0.0-beta.1", path = "acvm-repo/blackbox_solver", default-features = false }
bn254_blackbox_solver = { version = "1.0.0-beta.1", path = "acvm-repo/bn254_blackbox_solver", default-features = false }

# Noir compiler workspace dependencies
fm = { path = "compiler/fm" }
noirc_arena = { path = "compiler/noirc_arena" }
noirc_driver = { path = "compiler/noirc_driver" }
noirc_errors = { path = "compiler/noirc_errors" }
noirc_evaluator = { path = "compiler/noirc_evaluator" }
noirc_frontend = { path = "compiler/noirc_frontend" }
noirc_printable_type = { path = "compiler/noirc_printable_type" }

# Noir tooling workspace dependencies
noir_fuzzer = { path = "tooling/fuzzer" }
nargo = { path = "tooling/nargo" }
nargo_fmt = { path = "tooling/nargo_fmt" }
nargo_toml = { path = "tooling/nargo_toml" }
noir_lsp = { path = "tooling/lsp" }
noir_debugger = { path = "tooling/debugger" }
noirc_abi = { path = "tooling/noirc_abi" }
noirc_artifacts = { path = "tooling/noirc_artifacts" }
bb_abstraction_leaks = { path = "tooling/bb_abstraction_leaks" }
acvm_cli = { path = "tooling/acvm_cli" }

# Arkworks
ark-bn254 = { version = "^0.4.0", default-features = false, features = [
    "curve",
] }
ark-bls12-381 = { version = "^0.4.0", default-features = false, features = [
    "curve",
] }
grumpkin = { version = "0.1.0", package = "noir_grumpkin", features = ["std"] }
ark-ec = { version = "^0.4.0", default-features = false }
ark-ff = { version = "^0.4.0", default-features = false }
ark-std = { version = "^0.4.0", default-features = false }

# Misc utils crates
iter-extended = { path = "utils/iter-extended" }

# LSP
async-lsp = { version = "0.1.0", default-features = false }
lsp-types = "0.94.1"
tower = "0.4"

# Wasm
wasm-bindgen = { version = "=0.2.86", features = ["serde-serialize"] }
wasm-bindgen-test = "0.3.36"
wasm-bindgen-futures = "0.4.36"
console_error_panic_hook = "0.1.7"
gloo-utils = { version = "0.1", features = ["serde"] }
js-sys = "0.3.62"
getrandom = "0.2"

# Debugger
dap = "0.4.1-alpha1"
clap = { version = "4.3.19", features = ["derive", "env"] }
codespan = { version = "0.11.1", features = ["serialization"] }
codespan-lsp = "0.11.1"
codespan-reporting = "0.11.1"

# Benchmarking
criterion = "0.5.0"
# Note that using the "frame-pointer" feature breaks framegraphs on linux
# https://github.com/tikv/pprof-rs/pull/172
pprof = { version = "0.14", features = ["flamegraph", "criterion"] }

cfg-if = "1.0.0"
dirs = "4"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
smol_str = { version = "0.1.17", features = ["serde"] }
thiserror = "1.0.21"
toml = "0.7.2"
url = "2.5.4"
base64 = "0.21.2"
fxhash = "0.2.1"
build-data = "0.1.3"
bincode = "1.3.3"
hex = "0.4.2"
const_format = "0.2.30"
lazy_static = "1.4"
num-bigint = "0.4"
num-traits = "0.2"
similar-asserts = "1.5.0"
tempfile = "3.6.0"
test-case = "3.3.1"
jsonrpc = { version = "0.16.0", features = ["minreq_http"] }
flate2 = "1.0.24"
color-eyre = "0.6.2"
rand = "0.8.5"
proptest = "1.2.0"
proptest-derive = "0.4.0"
rayon = "1.8.0"
sha2 = { version = "0.10.6", features = ["compress"] }
sha3 = "0.10.6"
strum = "0.24"
strum_macros = "0.24"

im = { version = "15.1", features = ["serde"] }
tracing = "0.1.40"
tracing-web = "0.1.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
rust-embed = "6.6.0"

[profile.dev]
# This is required to be able to run `cargo test` in acvm_js due to the `locals exceeds maximum` error.
# See https://ritik-mishra.medium.com/resolving-the-wasm-pack-error-locals-exceed-maximum-ec3a9d96685b
opt-level = 1

# release mode with extra checks, e.g. overflow checks
[profile.release-pedantic]
inherits = "release"
overflow-checks = true

[profile.test]
inherits = "dev"
overflow-checks = true

[profile.size]
inherits = "release"
lto = true
opt-level = "z"

[profile.size-aggressive]
inherits = "release"
strip = true
lto = true
panic = "abort"
opt-level = "z"
