[workspace]

members = [
    # Compiler crates
    "compiler/noirc_arena",
    "compiler/noirc_evaluator",
    "compiler/noirc_frontend",
    "compiler/noirc_errors",
    "compiler/noirc_driver",
    "compiler/noirc_printable_type",
    "compiler/noirc_span",
    "compiler/fm",
    "compiler/wasm",
    # Crates related to tooling built on top of the Noir compiler
    "tooling/lsp",
    "tooling/debugger",
    "tooling/ast_fuzzer",
    "tooling/ast_fuzzer/fuzz",
    "tooling/greybox_fuzzer",
    "tooling/nargo",
    "tooling/nargo_doc",
    "tooling/nargo_expand",
    "tooling/nargo_fmt",
    "tooling/nargo_cli",
    "tooling/nargo_toml",
    "tooling/nargo_fuzz_target",
    "tooling/noirc_artifacts",
    "tooling/noirc_artifacts_info",
    "tooling/noirc_abi",
    "tooling/noirc_abi_wasm",
    "tooling/acvm_cli",
    "tooling/artifact_cli",
    "tooling/profiler",
    "tooling/inspector",
    # ACVM
    "acvm-repo/acir_field",
    "acvm-repo/acir",
    "acvm-repo/acvm",
    "acvm-repo/acvm_js",
    "acvm-repo/brillig",
    "acvm-repo/brillig_vm",
    "acvm-repo/blackbox_solver",
    "acvm-repo/bn254_blackbox_solver",
    # Utility crates
    "utils/iter-extended",

    "tooling/ssa_cli",
    "tooling/ssa_fuzzer",
    "tooling/ssa_fuzzer/fuzzer",
    "tooling/ssa_verification",
    "tooling/ssa_executor",
]
default-members = [
    "tooling/nargo_cli",
    "tooling/acvm_cli",
    "tooling/artifact_cli",
    "tooling/ssa_cli",
    "tooling/profiler",
    "tooling/inspector",
]
resolver = "2"

[workspace.package]
# x-release-please-start-version
version = "1.0.0-beta.17"
# x-release-please-end
authors = ["The Noir Team <team@noir-lang.org>"]
edition = "2024"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/noir-lang/noir/"

[workspace.lints.rust]
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"
unreachable_pub = "warn"
unsafe_code = "deny"
unused_must_use = "warn"
mismatched_lifetime_syntaxes = "allow"

[workspace.lints.clippy]
cast_lossless = "warn"
semicolon_if_nothing_returned = "warn"
result_large_err = "allow"
uninlined_format_args = "warn"

[workspace.dependencies]

# ACVM workspace dependencies
acir_field = { version = "1.0.0-beta.17", path = "acvm-repo/acir_field", default-features = false }
acir = { version = "1.0.0-beta.17", path = "acvm-repo/acir", default-features = false }
acvm = { version = "1.0.0-beta.17", path = "acvm-repo/acvm" }
brillig = { version = "1.0.0-beta.17", path = "acvm-repo/brillig", default-features = false }
brillig_vm = { version = "1.0.0-beta.17", path = "acvm-repo/brillig_vm", default-features = false }
acvm_blackbox_solver = { version = "1.0.0-beta.17", path = "acvm-repo/blackbox_solver", default-features = false }
bn254_blackbox_solver = { version = "1.0.0-beta.17", path = "acvm-repo/bn254_blackbox_solver", default-features = false }

# Noir compiler workspace dependencies
fm = { path = "compiler/fm" }
noirc_arena = { path = "compiler/noirc_arena" }
noirc_driver = { path = "compiler/noirc_driver" }
noirc_errors = { path = "compiler/noirc_errors" }
noirc_evaluator = { path = "compiler/noirc_evaluator" }
noirc_frontend = { path = "compiler/noirc_frontend" }
noirc_printable_type = { path = "compiler/noirc_printable_type" }
noirc_span = { path = "compiler/noirc_span" }

# Noir tooling workspace dependencies
noir_greybox_fuzzer = { path = "tooling/greybox_fuzzer" }
nargo = { path = "tooling/nargo" }
nargo_cli = { path = "tooling/nargo_cli" }
nargo_doc = { path = "tooling/nargo_doc" }
nargo_expand = { path = "tooling/nargo_expand" }
nargo_fmt = { path = "tooling/nargo_fmt" }
nargo_toml = { path = "tooling/nargo_toml" }
noir_lsp = { path = "tooling/lsp" }
noir_debugger = { path = "tooling/debugger" }
noirc_abi = { path = "tooling/noirc_abi" }
noirc_artifacts = { path = "tooling/noirc_artifacts" }
noirc_artifacts_info = { path = "tooling/noirc_artifacts_info" }
noir_artifact_cli = { path = "tooling/artifact_cli" }
noir_ssa_executor = { path = "tooling/ssa_executor" }
noir_ast_fuzzer = { path = "tooling/ast_fuzzer" }

# Arkworks
ark-bn254 = { version = "^0.5.0", default-features = false, features = [
    "curve",
] }
ark-bls12-381 = { version = "^0.5.0", default-features = false, features = [
    "curve",
] }
ark-grumpkin = { version = "^0.5.0", default-features = false }
ark-ec = { version = "^0.5.0", default-features = false }
ark-ff = { version = "^0.5.0", default-features = false, features = ["asm"] }
ark-std = { version = "^0.5.0", default-features = false }

# Misc utils crates
iter-extended = { path = "utils/iter-extended" }

# LSP
async-lsp = { version = "0.2.2", default-features = false }
tower = "0.5"

# Wasm
wasm-bindgen = { version = "=0.2.100", features = ["serde-serialize"] }
wasm-bindgen-test = "0.3.50"
wasm-bindgen-futures = "0.4.50"
console_error_panic_hook = "0.1.7"
gloo-utils = { version = "0.1", features = ["serde"] }
js-sys = "0.3.62"
getrandom = "^0.3.3"

# Debugger
dap = "0.4.1-alpha1"
clap = { version = "4.3.19", features = ["derive", "env"] }
codespan = { version = "0.11.1", features = ["serialization"] }
codespan-lsp = "0.11.1"
codespan-reporting = "0.11.1"

# Benchmarking
criterion = "^0.5.0"
# Note that using the "frame-pointer" feature breaks framegraphs on linux
# https://github.com/tikv/pprof-rs/pull/172
pprof = { version = "^0.15.0", features = ["flamegraph", "criterion"] }

# MessagePack
rmp = "0.8.14"
rmp-serde = "1.3.0"
rmpv = "1.3.0"

arbitrary = "1.4.1"
arbtest = "0.3.2"
cfg-if = "1.0.0"
dirs = "^6.0.0"
env_logger = "0.11.6"
log = "0.4"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
smol_str = { version = "0.3.2", features = ["serde"] }
thiserror = "1.0.21"
toml = "0.7.2"
url = "2.5.4"
base64 = "^0.22.1"
rustc-hash = "2.1.1"
build-data = "^0.3.3"
bincode = { version = "^2.0.1", features = ["serde"] }
hex = "0.4.2"
const_format = "0.2.30"
indexmap = "^2.10.0"
lazy_static = "1.4"
libfuzzer-sys = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
num_enum = "0.7.3"
num-integer = "0.1"
regex = "1.11"
similar = "2.7.0"
similar-asserts = "1.5.0"
tempfile = "3.6.0"
test-case = "3.3.1"
jsonrpsee = { version = "0.25.1", features = ["client-core"] }
flate2 = "1.0.24"
color-eyre = "0.6.2"
rand = "^0.9.2"
# The `fork` and `timeout` feature doesn't compile with Wasm (wait-timeout doesn't find the `imp` module).
proptest = { version = "1.6.0", default-features = false, features = [
    "std",
    "bit-set",
] }
proptest-derive = "^0.6.0"
rayon = "1.8.0"
sha2 = "0.11.0-rc.3"
sha3 = "0.11.0-rc.3"
k256 = "0.14.0-rc.1"
p256 = "0.14.0-rc.1"
strum = "0.24"
strum_macros = "0.24"
tokio = "1.42"
im = { version = "15.1", features = ["serde"] }
tracing = "0.1.40"
tracing-web = "0.1.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
rust-embed = "^8.7.2"
petgraph = "^0.8.2"
insta = "1.42.2"

[profile.dev]
# This is required to be able to run `cargo test` in acvm_js due to the `locals exceeds maximum` error.
# See https://ritik-mishra.medium.com/resolving-the-wasm-pack-error-locals-exceed-maximum-ec3a9d96685b
opt-level = 1

# release mode with extra checks, e.g. overflow checks
[profile.release-pedantic]
inherits = "release"
overflow-checks = true

[profile.test]
inherits = "dev"
overflow-checks = true

[profile.size]
inherits = "release"
lto = true
opt-level = "z"

[profile.size-aggressive]
inherits = "release"
strip = true
lto = true
panic = "abort"
opt-level = "z"

[profile.bench]
lto = true
