[workspace]

members = ["acir_field", "acir", "acvm", "acvm_js", "stdlib", "brillig", "brillig_vm", "blackbox_solver", "barretenberg_blackbox_solver"]
resolver = "2"

[workspace.package]
authors = ["The Noir Team <team@noir-lang.org>"]
edition = "2021"
license = "MIT"
rust-version = "1.66"
repository = "https://github.com/noir-lang/acvm/"

[workspace.dependencies]
acir = { version = "0.27.0", path = "acir", default-features = false }
acir_field = { version = "0.27.0", path = "acir_field", default-features = false }
stdlib = { package = "acvm_stdlib", version = "0.27.0", path = "stdlib", default-features = false }
brillig = { version = "0.27.0", path = "brillig", default-features = false }
brillig_vm = { version = "0.27.0", path = "brillig_vm", default-features = false }
acvm_blackbox_solver = { version = "0.27.0", path = "blackbox_solver", default-features = false }
barretenberg_blackbox_solver = { version = "0.26.1", path = "barretenberg_blackbox_solver", default-features = false }

bincode = "1.3.3"

hex = "0.4.2"
num-bigint = "0.4"
num-traits = "0.2"

thiserror = "1.0.21"


serde = { version = "1.0.136", features = ["derive"] }

[profile.dev]
# This is required to be able to run `cargo test` in acvm_js due to the `locals exceeds maximum` error.
# See https://ritik-mishra.medium.com/resolving-the-wasm-pack-error-locals-exceed-maximum-ec3a9d96685b
opt-level = 1
