[package]
name = "aztec_backend"
version = "0.1.0"
authors = ["Kevaundray Wedderburn <kevtheappdev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
noir_field = {path = "../noir_field"}
acir = {path ="../acir"}

wasmer-wasi = "1.0.1"

wasmer = "1.0.1"
# wasmer-compiler-llvm = "1.0.1"
wasmer-engine-native = "1.0.1"
wasmer-engine-jit = "1.0.1"
wasmer-cache = "1.0.1"

dirs = "3.0"
reqwest = {version = "0.10.8",features = ["blocking"]}
error-chain = "0.12.4"
regex = "1.4.0"

once_cell = "1.5.2"