[package]
name = "aztec_macros"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acvm.workspace = true
noirc_frontend.workspace = true
noirc_errors.workspace = true
iter-extended.workspace = true
bn254_blackbox_solver.workspace = true
convert_case = "0.6.0"
im.workspace = true
regex = "1.10"
itertools = "^0.10"
hex.workspace = true
