[package]
name = "barretenberg-rs"
version = "0.1.0"
authors = ["Kevaundray Wedderburn <kevtheappdev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmer-runtime = "0.16.0"
wasmer-wasi = "0.16.0"
rasa_field = {path = "../rasa_field"}
