[package]
name = "noir"
version = "0.1.0"
authors = ["Kevaundray Wedderburn <kevtheappdev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
noirc_frontend = {path = "../noirc_frontend"}
noirc_driver = {path = "../noirc_driver"}
noir_field = {path = "../noir_field"}
noir_evaluator = {path = "../noir_evaluator"}
aztec_backend = {path = "../aztec_backend"}
pwg = {path = "../pwg"}
aztec_backend_barretenberg_rs = {path = "../aztec_backend_barretenberg_rs"}
acir = {path = "../acir"}
sha2 = "0.9"
clap = "2.0"
hex = "0.4.2"
toml = "0.5"