[package]
name = "noir_evaluator"
version = "0.1.0"
authors = ["Kevaundray Wedderburn <kevtheappdev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
noirc_frontend = {path = "../noirc_frontend"}
low_level_std_lib = {path = "../low_level_std_lib"}
noir_field = {path = "../noir_field"}