[package]
name = "noir_evaluator"
version = "0.1.0"
authors = ["Kevaundray Wedderburn <kevtheappdev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
noirc_frontend = {path = "../noirc_frontend"}
noirc_errors = {path = "../noirc_errors"}
noir_field = {path = "../noir_field"}
nargo = {path = "../nargo"}
acir = {path = "../acir"}
thiserror = "1.0.21"

blake2 = "0.9.1"