[package]
name = "noir_wg"
version = "0.1.0"
authors = ["Kevaundray Wedderburn <kevtheappdev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
noirc_analyser = {path = "../noirc_analyser"}
noirc_frontend = {path = "../noirc_frontend"}
noir_field = {path = "../noir_field"}
low_level_std_lib = {path = "../low_level_std_lib"}
noir_evaluator = {path = "../noir_evaluator"}
aztec_backend = {path = "../aztec_backend"}

sha2= "0.9"