[package]
name = "noirc_frontend"
version = "0.1.0"
authors = ["Kevaundray Wedderburn <kevtheappdev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
noir_field = {path = "../noir_field"}
acir = {path = "../acir"}
noirc_errors = {path = "../noirc_errors"}
thiserror = "1.0.21"
std_lib = {path = "../std_lib"}

# This is only needed by the analyser, we should eventually move analysis into it's own crate and rename this crate as it will no longer be the frontend
nargo = {path = "../nargo"}
