[package]
name = "pwg"
version = "0.1.0"
authors = ["Kevaundray Wedderburn <kevtheappdev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acir = {path = "../acir"}
noir_field = {path = "../noir_field"}
aztec_backend = {path = "../aztec_backend"}
sha2 = "0.9"
blake2 = "0.9.1"
hex = "0.4.2"