[package]
name = "rasa_cli"
version = "0.1.0"
authors = ["Kevaundray Wedderburn <kevtheappdev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
librasac_lexer = {path = "../librasac_lexer"}
librasac_ast = {path = "../librasac_ast"}
librasac_analyser = {path = "../librasac_analyser"}
librasac_parser = {path = "../librasac_parser"}
rasa_field = {path = "../rasa_field"}
rasa_evaluator = {path = "../rasa_evaluator"}
barretenberg-rs = {path = "../barretenberg-rs"}
rasa_wg = {path = "../rasa_wg"}

sha2 = "0.9"
clap = "2.0"