[package]
name = "rasa_serialiser"
version = "0.1.0"
authors = ["Kevaundray Wedderburn <kevtheappdev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rasa_field = {path = "../rasa_field"}
rasa_evaluator = {path = "../rasa_evaluator"}
barretenberg-rs = {path = "../barretenberg-rs"}
