[package]
name = "acir"
description = "ACIR is the IR that the VM processes, it is analogous to LLVM IR"
# x-release-please-start-version
version = "1.0.0-beta.15"
# x-release-please-end
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acir_field.workspace = true
brillig.workspace = true
noir_protobuf.workspace = true
noirc_span.workspace = true

color-eyre.workspace = true
serde.workspace = true
thiserror.workspace = true
flate2.workspace = true
bincode.workspace = true
base64.workspace = true
num-bigint.workspace = true
num_enum.workspace = true
num-traits.workspace = true
prost.workspace = true
rmp-serde.workspace = true
serde-big-array = "0.5.1"
strum = { workspace = true }
strum_macros = { workspace = true }

proptest = { workspace = true, optional = true }
proptest-derive = { workspace = true, optional = true }

[build-dependencies]
prost-build.workspace = true
protoc-bin-vendored.workspace = true

[dev-dependencies]
serde_json = "1.0"
serde-reflection = "0.3.6"
serde-generate = "0.25.1"
rustc-hash.workspace = true
criterion.workspace = true
pprof.workspace = true
regex.workspace = true
rmpv.workspace = true
insta.workspace = true
similar-asserts.workspace = true

acir = { path = ".", features = ["arb"] } # Self to turn on `arb`.

[features]
default = []
bn254 = ["acir_field/bn254"]
bls12_381 = ["acir_field/bls12_381"]
arb = ["proptest", "proptest-derive", "brillig/arb"]

[lib]
# See https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false

[[bench]]
name = "serialization"
harness = false
